Reorganize and fill in the boilerplate items

--- a/report.tex
+++ b/report.tex
@@ -1,6 +1,7 @@
 \documentclass[a4paper]{article}
 \usepackage{graphics}
 \usepackage{shonan}
+\usepackage{hyperref}
 
 \begin{document}
 
@@ -26,59 +27,165 @@ Meiyappan Nagappan (University of Waterloo, Canada)}
 
 \subsection{Background}
 
+Release engineering is the process that ships code changes from a developer's workspace to the end user.
+It encompasses tools and technologies to accomplish continuous integration, deployment, delivery, and experimentation, such as build specifications, infrastructure-as-code, containerization, and many more.
+
+In recent years, there has been a renewed interest in this area, driven by the need to deliver new content to users in a continuous fashion.
+For example, popular web browsers like Mozilla Firefox and Google Chrome have shifted from slow, semi-annual releases to rapid, six-week release cycles.
+In the domain of web applications, where control over the main delivery process is retained, industry has produced innovative techniques to achieve continuous delivery of new content.
+These techniques allow for new content to be tentatively released (e.g., canary deployment), seamlessly released (or rolled back) without customer-facing downtime (e.g., blue-green deployment), and analytically evaluated with data from the field (e.g., A/B testing).
+
+At the same time, mobile applications have become a typical means of delivering content to users. For example, recent market studies show that about four billion mobile devices are connected in 2017\footnote{\url{https://is.gd/OVPgze}} and predict that the global mobile app economy is expected to be worth \$157 billion by 2022.\footnote{\url{https://is.gd/61uIoy}}
+
+\subsection{Challenges and Opportunities}
+
+Rather than delivering content directly through the web browser, mobile app users install applications on their mobile devices (e.g., smartphones, tablets).
+Release engineers need to deliver new releases from a software organization to app stores that curate mobile apps and make them available to users.
+The existence of third-party app stores in the release path from software organization to user poses several challenges:
+
+\begin{itemize}
+\item Users must opt-in to an update of the client-side app in order for new content to be delivered. Releasing too quickly creates an overhead for users, since downloading and installing updates may slow down access to apps. Moreover, with the explosive growth of mobile app sizes, users may need to pay expensive data fees for large downloads on cellular networks.
+\item App stores act as a bottleneck between software organizations and users, which may impose delays in the release process. For example, to prevent malware and exploit- vulnerable apps from impacting users, all of the apps that appear in the Apple app store need to be certified by an Apple technician. This certification process is slow, cumbersome, and expensive.
+\end{itemize}
+
 \subsection{Goals of the Meeting}
 
-\clearpage
+The purpose of this Shonan meeting is to bring together leading researchers and practitioners from the release engineering and mobile apps fields. The aim is not only to foster an exchange of ideas, but also to outline a clear set of concrete grand challenges and propose a roadmap for how those challenges can be met by future work.
 
-\section{List of Participants}
-\begin{itemize}
-\item Participant 1, Affiliation 1
-\item Participant 2, Affiliation 2
-\item Participant 3, Affiliation 3
-\item Participant 4, Affiliation 4
-\item Participant 5, Affiliation 5
-\end{itemize}
+A tangible outcome that we are aiming to produce is a manuscript that describes the grand challenges and our roadmap for future research.
+For example, a foreseeable grand challenge is how software organizations can achieve crowd-based deployment strategies that have become so popular for web applications (e.g., canary and blue-green deployment) in a mobile setting.
+The produced manuscript will be submitted as a vision paper to a conference or journal.
 
 \clearpage
 
 \section{Meeting Schedule}
 
 \begin{bfseries}
-Check-in Day: January XX (Sun)
+Check-in Day: December 08 (Sun)
 \end{bfseries}
 \begin{itemize}
 \item Welcome Banquet
 \end{itemize}
 \begin{bfseries}
-{Day1: January XX (Mon)}
+{Day1: December 09 (Mon)}
 \end{bfseries}
 \begin{itemize}
-\item Talks and Discussions
-\item Group Photo Shooting
+\item Plenary: Introduction to the meeting
+\item Plenary: Introductory lightning talks
+\item Breakout: Breakout session 1 (Artefacts, Fragmentation, Human Aspects, Log Analysis)
+\item Plenary: Reports and discussion on breakout session 1
 \end{itemize}
 \begin{bfseries}
-Day2: January XX (Tue)
+Day2: December 10 (Tue)
 \end{bfseries}
 \begin{itemize}
-\item Talks and Discussions
+\item Plenary: Planning for breakout session 2 
+\item Breakout: Breakout session 2 (Definitions)
+\item Plenary: Reports and discussion on breakout session 2
+\item Plenary: Planning for breakout session 3
+\item Breakout: Session 2 (Continuous Experimentation, Quality Assurance, Tools)
+\item Plenary: Reports and discussion on breakout group 3
+\item Demo: Julian Hardy
 \end{itemize}
 \begin{bfseries}
-Day3: January XX (Wed)
+Day3: December 11 (Wed)
 \end{bfseries}
 \begin{itemize}
-\item Talks and Discussions
+\item Plenary: Plan for breakout session 4
+\item Breakout: Session 4 (Seeding Collaborative Projects)
 \item Excursion and Main Banquet
 \end{itemize}
 \begin{bfseries}
-Day4: January XX (Thu)
+Day4: December 12 (Thu)
 \end{bfseries}
 \begin{itemize}
-\item Talks and Discussions
-\item Wrap up
+\item Plenary: Reports and discussion from breakout session 4
+\item Breakout: Session 5 (Solidifying Collaboration Plans)
+\item Plenary: Meeting retrospective \& closing
 \end{itemize}
 
 \clearpage
 
+\section{Plenary Talks}
+
+\subsection{Walkthrough of Modern Release Analyics Workbench for Android Apps}
+
+Julian Harty, Commercetest Limited/Open University, UK
+
+TODO
+
+\clearpage
+
 \section{Breakout Group Discussions}
+
+\subsection{Session 1: Exploring Topics of Interest}
+
+\subsubsection{Artefacts for Release Engineering of Mobile Apps}
+
+\subsubsection{Overcoming Fragmentation of Android Versions in Deployment of Mobile Apps}
+
+\subsubsection{Human Aspects of Release Engineering for Mobile Apps}
+
+\subsection{Session 2: Establishing Working Definitions}
+
+\subsubsection{Breakout Group A}
+
+\subsubsection{Breakout Group B}
+
+\subsubsection{Breakout Group C}
+
+\subsubsection{Consensus}
+
+\subsection{Session 3: The State of the Practice}
+
+\subsubsection{Continuous Experimentation}
+
+\subsubsection{Quality Assurance in the Realm of Release Engineering of Mobile Apps}
+
+\subsection{Session 4 and 5: Seeding Collaborative Projects}
+
+\subsubsection{Log Analysis}
+
+\subsubsection{Continuous Experimentation with Mobile App Restrictions}
+
+\subsubsection{The Ubiquity of the App Store Paradigm (Beyond Mobile Apps)}
+
+\clearpage
+
+\section{List of Attendees}
+
+\subsection{Co-organizers}
+
+\begin{itemize}
+\item Shane McIntosh (McGill University, Canada)
+\item Yasutaka Kamei (Kyushu University, Japan)
+\item Meiyappan Nagappan (University of Waterloo, Canada)
+\end{itemize}
+
+\subsection{Meeting Participants}
+
+\begin{itemize}
+\item Afnan Al-Subaihin (King Saud University, Saudi Arabia)
+\item Maur\'icio Aniche (Delft University of Technology, Netherlands)
+\item Daniel Dominguez (IMDEA Software Institute, Spain)
+\item Keheliya Gallaba (McGill University, Canada)
+\item Cuiyun Gao (Nanyang Technology University, Singapore)
+\item Daniel M. German (University of Victoria, Canada)
+\item Mike Godfrey (University of Waterloo, Canada)
+\item Julian Harty (Commercetest Limited/Open University, UK)
+\item Toshiki Hirao (Nara Institute of Science and Technology, Japan)
+\item Masanari Kondo (Kyoto Institute of Technology, Japan)
+\item Raula Gaikovina Kula (NAIST, Japan)
+\item Li Li (Monash University, Australia)
+\item Fabio Palomba (University of Zurich, Switzerland)
+\item Luca Pascarella (Delft University of Technology, Netherlands)
+\item Sebastian Proksch (University of Zurich, Switzerland)
+\item Weiyi Shang (Concordia University, Canada)
+\item Chakkrit (Kla) Tantithamthavorn (Monash University, Australia)
+\item Patanamon (Pick) Thongtanunam (University of Melbourne, Australia)
+\item Carmine Vassallo (University of Zurich, Switzerland)
+\item Lili Wei (The Hong Kong University of Science and Technology, China)
+\item Thomas Zimmermann (Microsoft Research, USA)
+\end{itemize}
 
 \end{document}
