Add group photo to the schedule

--- a/report.tex
+++ b/report.tex
@@ -93,6 +93,7 @@ Day3: December 11 (Wed)
 \begin{itemize}
 \item Plenary: Plan for breakout session 4
 \item Breakout: Session 4 (Seeding Collaborative Projects)
+\item Group photo shooting
 \item Excursion and Main Banquet
 \end{itemize}
 \begin{bfseries}
