finish the day 1

--- a/report.tex
+++ b/report.tex
@@ -5,6 +5,7 @@
 \usepackage{shonan}
 \usepackage{hyperref}
 \usepackage{tabularx}
+\usepackage{url}
 
 \newcommand{\smallsection}[1]{\noindent \textbf{#1}. }
 
@@ -19,6 +20,8 @@ Yasutaka Kamei\\
 Meiyappan Nagappan}
 \SHONANdate{December 09--12, 2019}
 \SHONANmakecover
+
+\def\tightlist{\itemsep1pt\parskip0pt\parsep0pt}
 
 \title{Release Engineering for Mobile Applications}
 \author{Organizers:\\
@@ -128,7 +131,7 @@ TODO
 
 \subsubsection{Artefacts for Release Engineering of Mobile Apps}
 
-\smallsection{Participants}
+\smallsection{Participants/Authors}
 Cuiyun Gao, Yasutaka Kamei, Li Li, Shane McIntosh, Sebastian Proksch
 
 \smallsection{Discussion Points}
@@ -136,14 +139,18 @@ The problems discussed are not specific to mobile app stores, rather than to gen
 
 \smallsection{Data Sources}
 \begin{itemize}
+    \tightlist
     \item User facing
         \begin{itemize}
+            \tightlist
             \item social media (reddit, blogs, twitter, FB, forums)
         \end{itemize}
     \item Developer facing
         \begin{itemize}
+            \tightlist
             \item App Stores
                 \begin{itemize}
+                    \tightlist
                     \item Apple, Google, Steam (commercial)
                     \item F-Droid (probably not representative), Linux Package Managers ... (open source)
                 \end{itemize}
@@ -154,6 +161,7 @@ The problems discussed are not specific to mobile app stores, rather than to gen
         \end{itemize}
     \item In between
         \begin{itemize}
+            \tightlist
             \item Logs
             \item Crash Reports
         \end{itemize}
@@ -180,7 +188,7 @@ In general, several research challenges have to be solved, like how to automatic
 
 \subsubsection{Overcoming Fragmentation of Android Versions in Deployment of Mobile Apps}
 
-\smallsection{Participants} Carmine Vassallo, Keheliya Gallaba, Raula Gaikovina Kula, Li Li, Daniel Dominguez
+\smallsection{Participants/Authors} Carmine Vassallo, Keheliya Gallaba, Raula Gaikovina Kula, Li Li, Daniel Dominguez
 
 \smallsection{Definitions} Push-based deployment model (in case of a web app): Build $\rightarrow$ Deploy $\rightarrow$ Release
 
@@ -189,8 +197,10 @@ Pull-based deployment model (in case of mobile apps): A pull request is generate
 \smallsection{Challenges} 
 
 \begin{itemize}
+    \tightlist
     \item For developers
         \begin{itemize}
+            \tightlist
             \item Misaligment on Frontend \& Backend
             \item Tracebility of app reviews to an app version (and therefore to a changelog)
             \item Tracebility between user and developer artifacts
@@ -199,12 +209,14 @@ Pull-based deployment model (in case of mobile apps): A pull request is generate
         \end{itemize}
     \item For researchers
         \begin{itemize}
+            \tightlist
             \item Lack of data for studies. In particular backend information
         \end{itemize}
 \end{itemize}
 
 \smallsection{Research directions}
 \begin{itemize}
+    \tightlist
     \item Feature toggle updates to emulate canary updates (How to get them right and proper)
     \item Factors that drive changes and updates to the users (What is a good release note that make people want to update faster?)
     \item Usage of network logs for aproximating the backend behaviour Compare the behaviour of the webapp to the frontend against the same backend
@@ -213,7 +225,7 @@ Pull-based deployment model (in case of mobile apps): A pull request is generate
 
 \subsubsection{Human Aspects of Release Engineering for Mobile Apps}
 
-\smallsection{Participants}
+\smallsection{Participants/Authors}
 Tom Zimmermann, Daniel German, Mike Godfrey, Fabio Palomba, Pick Thongtanunam, Kla Tantithamthavorn, Toshiki Hirao, Al-Subaihin, Masanari Kondo
 
 \smallsection{Contents (Figure \ref{figHumanAspects})}
@@ -226,12 +238,14 @@ Release engineering is not about bug fixes, but it's about social contract / int
 \end{figure}
 
 \begin{itemize}
+    \tightlist
     \item Q1: How do users accept releases (1st release for new users and later for existing users)? is it based on automatically updates?
     \item Q2: How do developers positively and negatively change the users' behaviors.
     \item Q3: How do app stores / ecosystems allow dev/users to accept releases?
     \item Implications/Benefits: win-win strategies for both users and developers + anti-patterns in release engienering.
     \item Other questions:
         \begin{itemize}
+            \tightlist
             \item Why mobile apps do not use issue tracking systems? Why do App stores do not provide ITSs for users?
             \item Do developers care about bugs?
             \item How do users accept releases?
@@ -244,10 +258,214 @@ Release engineering is not about bug fixes, but it's about social contract / int
 
 \subsubsection{Log Analysis for Mobile Apps}
 
+\smallsection{Participants/Authors}
+Meiyappan Nagappan, Julian Harty, Maur\'{i}cio Aniche, Luca Pascarella, Weiyi Shang
 
+\smallsection{Overview}
+This document discusses:
+
+\begin{itemize}
+\tightlist
+\item
+  Empirical studies in log engineering that we should do
+\item
+  (Existing) techniques we need to study and develop
+\item
+  Challenges faced by researchers in mobile log research
+\item
+  Existing tools/codebases to support researchers
+\item
+  Overall concerns in mobile logging
+\end{itemize}
+
+Our focus is on logging in the apps (the front-end) unless otherwise
+indicated.
+
+\smallsection{Empirical studies in log engineering}
+
+\begin{itemize}
+\tightlist
+\item
+  Why is logging used? Why do mobile devs log? Which logging libraries
+  are used in mobile apps?
+  \begin{itemize}
+    \tightlist
+    \item \url{https://users.encs.concordia.ca/~shang/pubs/Zeng2019_Article_StudyingTheCharacteristicsOfLo.pdf}
+  \end{itemize}  
+\item
+  Performance overhead: how much logging is too much?
+  \begin{itemize}
+    \tightlist
+    \item Signal-to-noise levels in the log messages?
+    \item How to determine the frequency of the logs being delivered back to the developers.
+  \end{itemize}
+\item
+  What do mobile developers use logs for?
+  \begin{itemize}
+    \tightlist
+    \item e.g., Are logs being used for performance monitoring?
+    \item Why do developers (even) use logs in apps where they cannot read the logs
+  \end{itemize}
+\end{itemize}
+
+\smallsection{Techniques to be studied and developed}
+
+\begin{itemize}
+\tightlist
+\item
+  How much existing techniques should be changed/evolved for mobile
+  apps? Do we need to devise specific tools for mobile?
+  \begin{itemize}
+    \tightlist
+    \item Log analysis research currently focus on Anomaly detection, Security and Privacy, Root cause analysis, Failure prediction, Software testing, Model inference and invariant mining, Reliability and dependability
+  \end{itemize} 
+\item
+  How to build different anomaly detection (ML) models for different
+  types of user behavior?
+    \begin{itemize}
+    \tightlist
+    \item In enterprise systems, we have been observing that a single model is not able to capture all the different behaviors of the different
+  companies. We expect the same for mobile apps.
+  \end{itemize}  
+\item
+  Can we automatically cluster the different user behaviors?
+    \begin{itemize}
+    \tightlist
+    \item How do we cope with different versions? Maybe Robust Log-Based Anomaly Detection on Unstable Log Data by
+    Zhang et al. might help.
+  \end{itemize}  
+\item
+  When do we want to send the logs back to the cloud? And how?
+    \begin{itemize}
+    \tightlist
+    \item Problems: cost, availability/connectivity, energy consumption.
+    \item Companies like Crashlytics, and Splunk are being by developers.
+    \end{itemize}
+\item
+  How do deal with the inconsistencies and the ever evolving log code
+  base?
+    \begin{itemize}
+    \tightlist
+    \item Robust Log-Based Anomaly Detection on Unstable Log Data. Xu Zhang,
+  Yong Xu, Qingwei Lin, Bo Qiao, Hongyu Zhang, Yingnong Dang, Chunyu
+  Xie, Xinsheng Yang, Qian Cheng, Ze Li, Junjie Chen, Xiaoting He,
+  Randolph Yao, Jian-Guang Lou, Murali Chintalapati, Furao Shen, and
+  Dongmei Zhang
+    \end{itemize}
+\item
+  Can we introduce dynamic logging? I.e., logging only when it's really
+  needed. Saves energy, bandwidth.
+    \begin{itemize}
+    \tightlist
+    \item Can we send a remote command to start logging that area? i.e., only log when it's needed? Remember that you can't deploy your app every second, so dynamically activating logs might be a specific problem of mobile apps.
+    \end{itemize}
+\item
+  Security of the logs: before shipping the logs to the cloud, maybe any
+  app can access those logs. How to store them in a secure way?
+\end{itemize}
+
+\smallsection{Overall concerns}
+\begin{itemize}
+\tightlist
+\item
+  Avoid privacy leaks
+  \begin{itemize}
+\item
+  Facebook ad library bug where the facebook token was written to the
+  log, other apps can read
+\item
+  GDPR in EU.
+
+  \begin{itemize}
+  \tightlist
+  \item
+    Who is liable to check if the logging/log files in the apps are
+    compliant?
+  \item
+    If you use your `own logging library to collect data', do you have
+    to ask permission for the user? (Note that for logs you get in the
+    app store, directly from Google, you don't need, as Google already
+    asked for it)
+  \end{itemize}
+\item
+  As a user, do you know what's being logged about you?
+  \end{itemize}
+\item
+  Size of the applications. Mobile apps are often smaller than
+  enterprise traditional projects. Mobile apps focus on single tasks
+\item
+  Is scalability as big of an issue as in other domains, e.g.,
+  enterprise applications?
+\item
+  Who is responsible to make sure that the log frameworks are good-faith
+  actors who do not have backdoors in the logging.
+\item
+  How much of the localization of log lines impact the tools and
+  techniques?
+\end{itemize}
+
+\smallsection{Research challenges}
+
+\begin{itemize}
+\tightlist
+\item
+  We need log datasets from mobile applications
+    \begin{itemize}
+  \tightlist
+\item
+  LogPai benchmark: \url{https://github.com/logpai}, but it does not
+  consider mobile apps.
+\end{itemize}
+
+\item
+  Representative datasets of mobile apps source code
+
+    \begin{itemize}
+  \tightlist
+\item
+  FDroid might be not that representative\ldots{}
+\end{itemize}
+\end{itemize}
+
+\smallsection{Existing tools}
+Note: \href{https://github.com/ISNIT0}{ISNIT0} is Joseph Reeve's github
+account. Joe works with \href{https://github.com/julianharty}{Julian
+Harty} on creating code to help research logging, mobile analytics.
+
+\begin{itemize}
+\tightlist
+\item
+  \url{https://github.com/ISNIT0/AndroidCrashDummy} a small
+  exploratory/demo app to test/exercise other aspects of logging and
+  analytics
+\item
+  \url{https://github.com/ISNIT0/AndroidLogAssert} a Log Assertion
+  Library for use with Android Espresso tests
+\item
+  \url{https://github.com/ISNIT0/logcat-filter} Logcat-filter and
+  analysis tool
+\item
+  \url{https://github.com/ISNIT0/log-searcher} A tool for searching
+  Android codebases and analysing usage of ``Log.*''
+\item
+  \url{https://github.com/ISNIT0/log-complexity-comparison} This tool
+  helps find complex code that does not have much logging to back it up.
+  It was originally built to help with research done by Julian Harty and
+  Joseph Reeve on logging placement. The output is a JSON file and an
+  HTML report, describing which files need more logging attention.
+\end{itemize}
+
+\smallsection{Logging by the Operating System}
+Google Android includes logging at the device level. Users have the
+option to opt-in/out to automatically provide usage and diagnostics data
+to Google {[}Play{]}. This logging includes usage, crashes, ANRs and
+performance issues.
 
 \subsection{Session 2: Establishing Working Definitions}
-
+      \begin{itemize}
+    \tightlist
+    \item
+    \end{itemize}
 \subsubsection{Breakout Group A}
 
 \subsubsection{Breakout Group B}
