--- a/report.tex
+++ b/report.tex
@@ -173,7 +173,7 @@ In general, several research challenges have to be solved, like how to automatic
 
 \begin{table}[h] \label{table:release}
     \centering
-    \caption{Release Pileline and artifacts}
+    \caption{Release Pipeline and artifacts}
     \begin{tabular}{l|l}
         \hline
         RelEng Phase & Artifacts \\ \hline 
@@ -201,9 +201,9 @@ Pull-based deployment model (in case of mobile apps): A pull request is generate
     \item For developers
         \begin{itemize}
             \tightlist
-            \item Misaligment on Frontend \& Backend
-            \item Tracebility of app reviews to an app version (and therefore to a changelog)
-            \item Tracebility between user and developer artifacts
+            \item Misalignment on Frontend \& Backend
+            \item Traceability of app reviews to an app version (and therefore to a changelog)
+            \item Traceability between user and developer artifacts
             \item Can not force users to update
             \item Support legacy software
         \end{itemize}
@@ -219,7 +219,7 @@ Pull-based deployment model (in case of mobile apps): A pull request is generate
     \tightlist
     \item Feature toggle updates to emulate canary updates (How to get them right and proper)
     \item Factors that drive changes and updates to the users (What is a good release note that make people want to update faster?)
-    \item Usage of network logs for aproximating the backend behaviour Compare the behaviour of the webapp to the frontend against the same backend
+    \item Usage of network logs for approximating the backend behavior Compare the behavior of the webapp to the frontend against the same backend
 \end{itemize}
 
 
@@ -229,7 +229,7 @@ Pull-based deployment model (in case of mobile apps): A pull request is generate
 Tom Zimmermann, Daniel German, Mike Godfrey, Fabio Palomba, Pick Thongtanunam, Kla Tantithamthavorn, Toshiki Hirao, Al-Subaihin, Masanari Kondo
 
 \smallsection{Contents (Figure \ref{figHumanAspects})}
-Release engineering is not about bug fixes, but it's about social contract / interactions between users and developers. We break users into 2 types, i.e., new users and existing users. Are we in the age of release economics? We try to release apps to get more money (\$\$\$), get more users, and chage users' behaviors. For example, we are about to release a new version with bug fixes and updates but don't forget to pay \$5. So, we hypothesize that users can change release engineering, and release engineering can change users' behaviors.
+Release engineering is not about bug fixes, but it's about social contract / interactions between users and developers. We break users into 2 types, i.e., new users and existing users. Are we in the age of release economics? We try to release apps to get more money (\$\$\$), get more users, and change users' behaviors. For example, we are about to release a new version with bug fixes and updates but don't forget to pay \$5. So, we hypothesize that users can change release engineering, and release engineering can change users' behaviors.
 
 \begin{figure}[h] \label{figHumanAspects}
   \centering
@@ -242,7 +242,7 @@ Release engineering is not about bug fixes, but it's about social contract / int
     \item Q1: How do users accept releases (1st release for new users and later for existing users)? is it based on automatically updates?
     \item Q2: How do developers positively and negatively change the users' behaviors.
     \item Q3: How do app stores / ecosystems allow dev/users to accept releases?
-    \item Implications/Benefits: win-win strategies for both users and developers + anti-patterns in release engienering.
+    \item Implications/Benefits: win-win strategies for both users and developers + anti-patterns in release engineering.
     \item Other questions:
         \begin{itemize}
             \tightlist
@@ -428,7 +428,7 @@ indicated.
 \end{itemize}
 
 \smallsection{Existing tools}
-Note: \href{https://github.com/ISNIT0}{ISNIT0} is Joseph Reeve's github
+Note: \href{https://github.com/ISNIT0}{ISNIT0} is Joseph Reeve's Github
 account. Joe works with \href{https://github.com/julianharty}{Julian
 Harty} on creating code to help research logging, mobile analytics.
 
@@ -462,17 +462,42 @@ to Google {[}Play{]}. This logging includes usage, crashes, ANRs and
 performance issues.
 
 \subsection{Session 2: Establishing Working Definitions}
-      \begin{itemize}
-    \tightlist
-    \item
-    \end{itemize}
-\subsubsection{Breakout Group A}
+In this session, we discuss the same topic about ``What Makes Mobile Special for Releng?'', but make three small groups to ensure that different voices and opinions are heard. 
 
-\subsubsection{Breakout Group B}
+\subsubsection{Group 1. What Makes Mobile Special for Releng?}
+\smallsection{Participants/Authors}
+Daniel M. German, Shane McIntosh, Thomas Zimmermann, Li Li, Keheliya Gallaba
 
-\subsubsection{Breakout Group C}
+\subsubsection{Group 2. What Makes Mobile Special for Releng?}
+\smallsection{Participants/Authors}
+Afnan, Mauricio, Mike, Julian, Toshiki, Raula, Sebastian, Pick, Yasu
+
+\subsubsection{Group 3. What Makes Mobile Special for Releng?}
+\smallsection{Participants/Authors}
+Meiyappan Nagappan, Julian Harty, Maur\'{i}cio Aniche, Luca Pascarella, Weiyi Shang
 
 \subsubsection{Consensus}
+
+\begin{itemize}
+\tightlist
+    \item Advantages and disadvantages of a slow/fast release process
+    \item Do not know what devs are doing
+    \begin{itemize}
+    \tightlist
+        \item OSS/companies we talk to may not be representative
+    \end{itemize}
+    \item Test infrastructure
+    \begin{itemize}
+    \tightlist
+        \item Fast lane $\rightarrow$ pipelines for app store
+    \end{itemize}
+    \item What is the effect of gate keeper?
+    \begin{itemize}
+    \tightlist
+        \item Adv: gets usage data / easy movement of money
+        \item Disadvantage: mercy of the gate keeper
+    \end{itemize}
+\end{itemize}
 
 \subsection{Session 3: The State of the Practice}
 
